WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121268
DFG::Int32Operand and fillInt32() should go away and all uses should be replaced with SpeculateInt32Operand
https://bugs.webkit.org/show_bug.cgi?id=121268
Summary
DFG::Int32Operand and fillInt32() should go away and all uses should be repla...
Filip Pizlo
Reported
2013-09-12 16:30:40 PDT
SpeculateInt32Operand is strictly more powerful than Int32Operand. It can even assert for you that you're not doing a speculation when you shouldn't be doing on, just like Int32Operand does. So we should get rid of Int32Operand.
Attachments
the patch
(11.67 KB, patch)
2013-09-12 16:31 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-09-12 16:31:36 PDT
Created
attachment 211491
[details]
the patch
Oliver Hunt
Comment 2
2013-09-12 16:54:03 PDT
Comment on
attachment 211491
[details]
the patch nice
Filip Pizlo
Comment 3
2013-09-12 16:57:28 PDT
Landed in
http://trac.webkit.org/changeset/155662
Brent Fulgham
Comment 4
2013-09-12 17:43:55 PDT
This may have introduced crashing on ML Release builds. See
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20%28Tests%29/r155662%20%2812852%29/media/video-seek-after-end-crash-log.txt
.
Filip Pizlo
Comment 5
2013-09-12 18:35:05 PDT
(In reply to
comment #4
)
> This may have introduced crashing on ML Release builds. See
http://build.webkit.org/results/Apple%20MountainLion%20Release%20WK1%20%28Tests%29/r155662%20%2812852%29/media/video-seek-after-end-crash-log.txt
.
Seems doubtful. That's a GC crash. GC crashes will be spurious to begin with. This patch changes how the compiler handles integers. The GC ignores integers. We should keep an eye on it, though.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug