DFG::Int32Operand and fillInt32() should go away and all uses should be replaced with SpeculateInt32Operand https://bugs.webkit.org/show_bug.cgi?id=121268

Reviewed by Oliver Hunt.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileUInt32ToNumber):
* dfg/DFGSpeculativeJIT.h:
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::nonSpeculativeUInt32ToNumber):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::nonSpeculativeUInt32ToNumber):



Canonical link: https://commits.webkit.org/139219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155662 268f45cc-cd09-0410-ab3c-d52691b4dbfc